--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.5.10",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "graphql": "^16.3.0",
+    "graphql-request": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
@@ -40,6 +44,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "babel-plugin-macros": "^3.1.0",
     "cssnano": "^5.1.4",
     "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
