--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "graphql": "^16.3.0",
     "graphql-request": "^4.1.0",
+    "i18next": "^21.6.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.7",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
