--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.2",
-    "babel-plugin-macros": "^3.1.0",
     "cssnano": "^5.1.4",
     "eslint": "^8.33.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -52,6 +51,7 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "vite": "^4.1.1",
-    "vite-plugin-babel-macros": "^1.0.6"
+    "vite-plugin-babel-macros": "^1.0.6",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
